banner text change

--- a/app/views/shared/web/common/_cookie_banner.erb
+++ b/app/views/shared/web/common/_cookie_banner.erb
@@ -1,5 +1,5 @@
 <div class="accept-cookie-wrapper row p-3 px-4 pr-5 mx-auto" style="display: none;">
-  <div class="my-auto ">This website uses cookies, by using it you agree to our cookies section. To read more visit our <a class="font-weight-bold text-link privacy-link" href="<%=GlobalConstant::CompanyOtherProductUrls.root_url%>privacy">Privacy Policy</a>
+  <div class="my-auto ">This website uses cookies. By using this site, you agree to this use. For more information, visit our <a class="font-weight-bold text-link privacy-link" href="<%=GlobalConstant::CompanyOtherProductUrls.root_url%>privacy">Privacy Policy</a>
   </div>
 
     <div class="cross-icon  pr-4">
