Static text changes. Changed "Demo Wallet" to "OST Wallet".

--- a/app/views/web/ost_wallet/launch.erb
+++ b/app/views/web/ost_wallet/launch.erb
@@ -5,7 +5,7 @@
         <h4 class="card-header">Download the Application</h4>
         <div class="card-body">
           <p class="col-md-10 font-weight-normal mx-auto mb-4">
-            We noticed that you do not have the Demo Wallet app. Please download the Demo Wallet and then try connecting to the <%= @launch_data['token_name'] %>
+            We noticed that you do not have the OST Wallet app. Please download the OST Wallet and then try connecting to the <%= @launch_data['token_name'] %>
           </p>
           <a class="d-inline-block" href="<%= @launch_data['ios_app_download_link'] %>" rel="noopener noreferrer nofollow" target="_blank" title="Download iOS App">
             <svg>
