--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-12">
       <h2 class="mt-4 mb-2">Privacy Policy</h2>
-      <p>Last Updated: June 26, 2019</p>
+      <p>Last Updated: July 4, 2019</p>
       <h5 class="mt-4 pt-2">1. INTRODUCTION</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality, and security of information relating to individuals (“Personal Data”) that we hold by complying with the requirements under applicable laws and regulations.
@@ -582,7 +582,7 @@
 
         <tr>
           <td>privacy_banner_dismiss</td>
-          <td>User did not accept the cookie banner.</td>
+          <td>User closed the cookie banner.</td>
           <td>Necessary</td>
           <td>6 months</td>
         </tr>
