--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -121,6 +121,16 @@
       </g>
     </g>
   </symbol>
+  <symbol id="success-icon-email-capture" viewBox="0 0 55 55">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="KYC-CSV_sent" transform="translate(-693.000000, -202.000000)">
+        <g id="Success" transform="translate(693.000000, 202.000000)">
+          <circle id="Oval-Copy-3" fill="#5ebe55" cx="27.5" cy="27.5" r="27.5"></circle>
+          <polyline id="Path-4-Copy-2" stroke="#FFFFFF" stroke-width="4.39999981" stroke-linecap="round" stroke-linejoin="round" points="17.4603175 27.7192061 24.8678091 34.9206349 41.031746 19.2063492"></polyline>
+        </g>
+      </g>
+    </g>
+  </symbol>
   <symbol id="twitter-bio-icon" viewBox="0 0 21 17">
     <g id="Final" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g id="AplhaII_POC-web" transform="translate(-639.000000, -4722.000000)" fill="#34445B">
