--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -2,11 +2,11 @@
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron-new" %>
 <%= render :partial => "/web/ost/index/side_by_side_1" %>
-<%= render :partial => "/web/ost/index/side_by_side_2" %>
-<%= render :partial => "/web/ost/index/side_by_side_3" %>
-<%= render :partial => "/web/ost/index/side_by_side_4" %>
-<%= render :partial => "/web/ost/index/side_by_side_5" %>
+<%#= render :partial => "/web/ost/index/side_by_side_2" %>
+<%#= render :partial => "/web/ost/index/side_by_side_3" %>
+<%#= render :partial => "/web/ost/index/side_by_side_4" %>
+<%#= render :partial => "/web/ost/index/side_by_side_5" %>
 <%= render :partial => "/web/ost/index/partners" %>
 <%= render :partial => "/web/ost/index/news_carousel" %>
-<%= render :partial => "/web/ost/index/subscribe" %>
+<%#= render :partial => "/web/ost/index/subscribe" %>
 <%= render :partial => "/shared/web/modals/help_video" %>
