--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-partners pt-4 pt-lg-6 pb-lg-6" id="partners">
+<section class="container-fluid container-partners pt-4 pt-lg-6 mb-6" id="partners">
   <div class="container pb-5 pb-lg-6">
     <div class="row pt-4 pb-6 py-lg-0">
     <div class="col-12">
