--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -1,13 +1,13 @@
-<section class="container-jumbotron pb-6 position-relative ">
+<section class="container-jumbotron microtransaction-section pb-6 position-relative ">
     <div class="container content-z-index">
       <div class="row">
 
         <div class="col-12 col-lg-5 mr-auto pt-4 side-by-side-1-desc">
-          <h5 class="header-title blue side-by-side text-capitalize">Deploy Your Brand Currency</h5>
+          <h5 class="header-title blue side-by-side text-capitalize">Add Micro-Transactions to Your App</h5>
           <p class="mt-3 desc blue">
-            Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and drive your engagement and growth metrics.
+            OST Platform provides all the tools you need to start integrating cryptocurrency micro-transactions.
           </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Get Started">Get Started</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Get Started">Explore OST Platform</a>
         </div>
 
       </div>
