--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -19,12 +19,12 @@
         <p class="mt-3 desc white">
           <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
-        <%# if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
-<!--          <button class="btn btn-primary my-2 my-md-3" title="<%#= ost_home_page_jumbotron[0]['primary_btn_title'] %>" data-toggle="modal" data-target="#helpVideoModal" data-src="<%#= ost_home_page_jumbotron[0]['primary_btn_link'] %>"><%#= ost_home_page_jumbotron[0]['primary_btn_title'] %></button>-->
-        <%# end %>
-        <%# if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
-<!--          <a href="<%#= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-white-border  my-2 ml-sm-3" title="<%#=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%#= ost_home_page_jumbotron[0]['sec_btn_title']%></a>-->
-        <%#end%>
+        <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
+          <button class="btn btn-primary my-2 my-md-3" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></button>
+        <% end %>
+        <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
+          <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-white-border  my-2 ml-sm-3" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
+        <%end%>
 
         <form class="ost-form mt-5 text-left" id="subscribe-form">
           <div class="input-group mb-2">
@@ -33,9 +33,8 @@
               GO
             </button>
           </div>
-          <div id="error-checkbox-section">
             <div class="error email-error" ></div>
-            <div class="form-group m-0 mx-auto checkbox-section" style="display:none">
+            <div class="form-group m-0 mx-auto checkbox-section" style="display : none ; ">
               <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
                 <div>
                   <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
@@ -52,23 +51,23 @@
               </label>
               <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
             </div>
-            <div class="error general_error"></div>
+          <div id="submitting-email-state" style="display:none">
+            <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="15" height="15"/>
+            <span class=" small-desc d-inline"> Submitting...</span>
           </div>
-
-        </form>
-        <div id="submitting-email-state" style="display:none">
-          <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="15" height="15"/>
-          <span class=" small-desc d-inline"> Submitting...</span>
-        </div>
-        <div id="subscribe-success-wallet-app" style="display: none">
+          <div id="subscribe-success-wallet-app" style="display: none">
             <svg class="icon d-inline" style="width:15px; height: 15px">
-               <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon-email-capture">
-                  </use>
-               </switch>
+              <switch>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon-email-capture">
+                </use>
+              </switch>
             </svg>
             <span class="small-desc d-inline">To confirm your email address, please click the link in the email we just sent you.</span>
-        </div>
+          </div>
+            <div class="error general_error"></div>
+
+        </form>
+
       </div>
 
       <div class="col-md-12 col-lg-6 text-lg-center text-left pt- pt-lg-0">
