--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -19,12 +19,12 @@
         <p class="mt-3 desc white">
           <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
-        <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
-          <button class="btn btn-primary my-2 my-md-3" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></button>
-        <% end %>
-        <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
-          <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-white-border  my-2 ml-sm-3" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
-        <%end%>
+        <%# if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
+<!--          <button class="btn btn-primary my-2 my-md-3" title="<%#= ost_home_page_jumbotron[0]['primary_btn_title'] %>" data-toggle="modal" data-target="#helpVideoModal" data-src="<%#= ost_home_page_jumbotron[0]['primary_btn_link'] %>"><%#= ost_home_page_jumbotron[0]['primary_btn_title'] %></button>-->
+        <%# end %>
+        <%# if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
+<!--          <a href="<%#= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-white-border  my-2 ml-sm-3" title="<%#=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%#= ost_home_page_jumbotron[0]['sec_btn_title']%></a>-->
+        <%#end%>
 
         <form class="ost-form mt-5 text-left" id="subscribe-form">
           <div class="input-group mb-2">
@@ -56,13 +56,13 @@
             <span class=" small-desc d-inline"> Submitting...</span>
           </div>
           <div id="subscribe-success-wallet-app" style="display: none">
-            <svg class="icon d-inline" style="width:15px; height: 15px">
+            <svg class="icon d-inline align-middle" style="width:15px; height: 15px">
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon-email-capture">
                 </use>
               </switch>
             </svg>
-            <span class="small-desc d-inline">To confirm your email address, please click the link in the email we just sent you.</span>
+            <span class="small-desc d-inline align-middle">Success! Please check your email for further details..</span>
           </div>
             <div class="error general_error"></div>
 
