--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -15,7 +15,7 @@
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
 
         <li>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Product">Product</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Product">Platform</a>
         </li>
 
         <li><a href="javascript:void(0)" class="main-nav-item">Developers
