--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -28,7 +28,7 @@
 
         <form class="ost-form mt-5 text-left" id="home-subscribe-form">
           <div class="input-group mb-2">
-            <input type="email" class="form-control" autocomplete="off" name="email" id="home-subscribe-form-email" placeholder="Enter Email Address to try OST Wallet" aria-label="" aria-describedby="basic-addon2" required>
+            <input type="email" class="form-control" autocomplete="off" name="email" id="home-subscribe-form-email" placeholder="Enter email for OST Wallet" aria-label="" aria-describedby="basic-addon2" required>
             <button class="input-group-append px-4 align-items-center" type="submit" title="GO" id="home-subscribe-form-submit" data-jsonp="<%= GlobalConstant::Email.subscribe_url %>">
               GO
             </button>
