--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-12">
       <h2 class="mt-4 mb-2">Privacy Policy</h2>
-      <p>Last Updated: July 4, 2019</p>
+      <p>Last Updated: July 23, 2019</p>
       <h5 class="mt-4 pt-2">1. INTRODUCTION</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality, and security of information relating to individuals (“Personal Data”) that we hold by complying with the requirements under applicable laws and regulations.
@@ -284,8 +284,8 @@
       </table>
 
       <h6 class="ml-2">
-        2.4 OST Wallet
-      </h6>
+      2.4 OST Wallet
+    </h6>
 
       <p class="ml-2">
         OST Wallet is a mobile app and it is a part of the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" rel="noopener noreferrer nofollow" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
@@ -320,7 +320,50 @@
       </table>
 
       <h6 class="ml-2">
-        2.5 We collect / process Personal Data about you in the following ways:
+        2.5 Chat
+      </h6>
+
+      <p class="ml-2">
+        We use tawk.to, a chat platform, to help you with any issues you may have with OST’s products in real-time. You have the option to accept or decline the chat, and the option to accept the chat with an anonymized e-mail address.
+      </p>
+
+      <p class="ml-2">
+        In order to perform the chat process and better serve you, we may process all or part of the following personal information from you:
+      </p>
+
+      <table border="1" class="w-75 mb-4 ml-2">
+
+        <thead>
+        <tr>
+          <th class="w-25">Data Subject</th>
+          <th class="w-25">Personal Data Collected</th>
+          <th>Reason / Legal Basis</th>
+          <th>Retention</th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+        <tr>
+          <td>Prospects & clients, clients’ end users</td>
+          <td>E-mail address, name (if opted in)</td>
+          <td>To contact you in case the chat goes offline (Art. 6 Para. 1 S. 1 lit. a GDPR)</td>
+          <td>1 year</td>
+        </tr>
+
+        <tr>
+          <td>Prospects & clients, clients’ end users</td>
+          <td>Content of chat</td>
+          <td>For use in streamlining our customer service process as well as alleviating user issues within our product (Art. 6 Para. 1 S. 1 lit. a GDPR)</td>
+          <td>1 year</td>
+        </tr>
+
+        </tbody>
+
+      </table>
+
+      <h6 class="ml-2">
+        2.6 We collect / process Personal Data about you in the following ways:
       </h6>
 
       <ul>
@@ -441,6 +484,9 @@
 
       <p class="ml-3 mb-0 font-weight-bold">Acuris Risk Intelligence<span class="font-weight-normal">, UK</span></p>
       <p class="ml-3">Our compliance partner, we are using Acuris to conduct AML checks for our clients and for our OST’s KYC clients’ end users.</p>
+
+      <p class="ml-3 mb-0 font-weight-bold">tawk.to inc.<span class="font-weight-normal">, USA</span></p>
+      <p class="ml-3">We are using tawk.to’s online chat feature to enable our website visitors and app users to chat with us directly. For more information on how tawk.to processes your data, please refer to their <a href="https://www.tawk.to/privacy-policy/" target="_blank" style="text-decoration: none">Privacy Policy</a>.</p>
 
       <h5 class="mt-4 pt-2">5. RETENTION OF YOUR PERSONAL DATA </h5>
       <p>
