--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -485,8 +485,8 @@
       <p class="ml-3 mb-0 font-weight-bold">Acuris Risk Intelligence<span class="font-weight-normal">, UK</span></p>
       <p class="ml-3">Our compliance partner, we are using Acuris to conduct AML checks for our clients and for our OST’s KYC clients’ end users.</p>
 
-      <p class="ml-3 mb-0 font-weight-bold">tawk.to inc.<span class="font-weight-normal">, USA</span></p>
-      <p class="ml-3">We are using tawk.to’s online chat feature to enable our website visitors and app users to chat with us directly. For more information on how tawk.to processes your data, please refer to their <a href="https://www.tawk.to/privacy-policy/" target="_blank" style="text-decoration: none">Privacy Policy</a>.</p>
+      <p class="ml-3 mb-0 font-weight-bold"><a href="https://www.tawk.to/" target="_blank" class="link"><u>tawk.to</u></a> inc.<span class="font-weight-normal">, USA</span></p>
+      <p class="ml-3">We are using tawk.to’s online chat feature to enable our website visitors and app users to chat with us directly. For more information on how tawk.to processes your data, please refer to their <a href="https://www.tawk.to/privacy-policy/" target="_blank" style="text-decoration: none"><u>Privacy Policy</u></a>.</p>
 
       <h5 class="mt-4 pt-2">5. RETENTION OF YOUR PERSONAL DATA </h5>
       <p>
