dev.ost.com links changes

--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -52,7 +52,7 @@
               <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java as well as framework code for wallets and third-party payment processors.</p>
             </div>
             <div>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/sdks_overview.html" class="text-link" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting-started/" class="text-link" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
