--- a/app/views/web/ost/roadmap/desktop/_2018-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q1.erb
@@ -81,7 +81,7 @@
           <li>Setup Economy</li>
           <li>Simulate Token Transfers</li>
         </ul>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api/#execute-a-transaction" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
