--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -42,7 +42,7 @@
         <li>Setup Economy</li>
         <li>Simulate Token Transfers</li>
       </ul>
-      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
+      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api/#execute-a-transaction" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
@@ -70,7 +70,7 @@
       <ul class="desc-lines">
         <li>Token Transfers via API</li>
       </ul>
-      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_token.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
+      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api/#token" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
