--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -69,19 +69,17 @@
         </form>
 
       </div>
-
-      <div class="col-md-12 col-lg-6 text-lg-center text-left pt- pt-lg-0">
-        <div class="row align-items-end align-items-md-enter justify-content-end">
-          <img class="img-fluid responsively-lazy ost-home-web-img"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
-               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-               alt="OST - Deploy Your Brand Currency"/>
+        <div class="d-none d-lg-block col-lg-6 text-lg-center text-left pt- pt-lg-0">
+          <%= render :partial => "/web/ost/index/ipad" %>
+          <div class="row fallbackImage align-items-end align-items-md-enter justify-content-end" style="display: none">
+            <img class="img-fluid responsively-lazy ost-home-web-img"
+                 src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+                 data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+                 srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+                 alt="OST - Deploy Your Brand Currency"/>
+          </div>
         </div>
-      </div>
-
     </div>
-
   </div>
 
   <div class="hp-section-bg-wrap">
@@ -94,4 +92,5 @@
 </section>
 
 <%end%>
+
 
