--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -595,5 +595,58 @@
       <path fill="#F9FDFD" d="M37 56v13.05h2.565V56z"/>
     </g>
   </symbol>
+  <symbol id="clock-transaction-list" viewBox="0 0 22 23">
+    <path d="M11.647 13.141h4.53v-2.588h-4.53v-4.53H9.06v7.118h2.588zM22 11.2c0 6.076-4.926 11-11 11-6.077 0-11-4.924-11-11S4.923.2 11 .2c6.074 0 11 4.924 11 11z" fill="#9BAFB5" fill-rule="evenodd"/>
+  </symbol>
+
+  <symbol id="ipad-home-btn-icon" viewBox="0 0 76 76">
+    <defs>
+      <linearGradient x1="50%" y1="124.907%" x2="50%" y2="13.094%" id="c">
+        <stop stop-color="#FFF" stop-opacity=".349" offset="0%"/>
+        <stop stop-opacity=".348" offset="100%"/>
+      </linearGradient>
+      <circle id="a" cx="625" cy="1729" r="38"/>
+      <filter x="-16.4%" y="-16.4%" width="132.9%" height="132.9%" filterUnits="objectBoundingBox" id="b">
+        <feGaussianBlur stdDeviation="6.5" in="SourceAlpha" result="shadowBlurInner1"/>
+        <feOffset dy="12" in="shadowBlurInner1" result="shadowOffsetInner1"/>
+        <feComposite in="shadowOffsetInner1" in2="SourceAlpha" operator="arithmetic" k2="-1" k3="1"   result="shadowInnerInner1"/>
+        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.0686990489 0" in="shadowInnerInner1"/>
+      </filter>
+    </defs>
+    <g transform="translate(-587 -1691)" fill="none" fill-rule="evenodd" opacity=".5">
+      <use fill="#FFF" xlink:href="#a"/>
+      <use fill="#000" filter="url(#b)" xlink:href="#a"/>
+      <circle stroke="url(#c)" stroke-width="4" stroke-linejoin="square" cx="625" cy="1729" r="36"/>
+    </g>
+
+  </symbol>
+
+  <symbol id="ipad-cam-icon" viewBox="0 0 20 20">
+    <title>home-button</title>
+    <desc>Created with Sketch.</desc>
+    <defs>
+      <linearGradient x1="50%" y1="124.907484%" x2="50%" y2="13.0938403%" id="linearGradient-1">
+        <stop stop-color="#FFFFFF" stop-opacity="0.348958333" offset="0%"></stop>
+        <stop stop-color="#000000" stop-opacity="0.347543025" offset="100%"></stop>
+      </linearGradient>
+      <circle id="path-2" cx="625" cy="1729" r="38"></circle>
+      <filter x="-16.4%" y="-16.4%" width="132.9%" height="132.9%" filterUnits="objectBoundingBox" id="filter-3">
+        <feGaussianBlur stdDeviation="6.5" in="SourceAlpha" result="shadowBlurInner1"></feGaussianBlur>
+        <feOffset dx="0" dy="12" in="shadowBlurInner1" result="shadowOffsetInner1"></feOffset>
+        <feComposite in="shadowOffsetInner1" in2="SourceAlpha" operator="arithmetic" k2="-1" k3="1" result="shadowInnerInner1"></feComposite>
+        <feColorMatrix values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.0686990489 0" type="matrix" in="shadowInnerInner1"></feColorMatrix>
+      </filter>
+    </defs>
+    <g id="Fresh-iterations" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" opacity="0.5">
+      <g id="Group-113" transform="translate(-587.000000, -1691.000000)">
+        <g id="iPad-Pro">
+          <g id="home-button">
+            <use fill="#FFFFFF" fill-rule="evenodd" xlink:href="#path-2"></use>
+            <use fill="black" fill-opacity="1" filter="url(#filter-3)" xlink:href="#path-2"></use>
+            <circle stroke="url(#linearGradient-1)" stroke-width="4" stroke-linejoin="square" cx="625" cy="1729" r="36"></circle>
+          </g>
+        </g>
+      </g>
+    </g>
 
 </svg>
