post-review chnages

--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -1,6 +1,6 @@
 /*
  *= require web/ost/index/Jumbotron
- *= require web/ost/index/Ipad
+ *= require web/ost/index/LatestTransactions
  *= require web/ost/index/Subscribe
  *= require web/ost/index/NewsCarousel
  *= require web/ost/index/EventsCarousel
