--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -622,28 +622,26 @@
   </symbol>
 
   <symbol id="ipad-cam-icon" viewBox="0 0 20 20">
-    <title>home-button</title>
+    <title>cam</title>
     <desc>Created with Sketch.</desc>
     <defs>
-      <linearGradient x1="50%" y1="124.907484%" x2="50%" y2="13.0938403%" id="linearGradient-1">
-        <stop stop-color="#FFFFFF" stop-opacity="0.348958333" offset="0%"></stop>
-        <stop stop-color="#000000" stop-opacity="0.347543025" offset="100%"></stop>
-      </linearGradient>
-      <circle id="path-2" cx="625" cy="1729" r="38"></circle>
-      <filter x="-16.4%" y="-16.4%" width="132.9%" height="132.9%" filterUnits="objectBoundingBox" id="filter-3">
-        <feGaussianBlur stdDeviation="6.5" in="SourceAlpha" result="shadowBlurInner1"></feGaussianBlur>
-        <feOffset dx="0" dy="12" in="shadowBlurInner1" result="shadowOffsetInner1"></feOffset>
+      <circle id="path-1" cx="10" cy="10" r="10"></circle>
+      <filter x="-10.0%" y="-10.0%" width="120.0%" height="120.0%" filterUnits="objectBoundingBox" id="filter-2">
+        <feGaussianBlur stdDeviation="1.5" in="SourceAlpha" result="shadowBlurInner1"></feGaussianBlur>
+        <feOffset dx="0" dy="1" in="shadowBlurInner1" result="shadowOffsetInner1"></feOffset>
         <feComposite in="shadowOffsetInner1" in2="SourceAlpha" operator="arithmetic" k2="-1" k3="1" result="shadowInnerInner1"></feComposite>
-        <feColorMatrix values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.0686990489 0" type="matrix" in="shadowInnerInner1"></feColorMatrix>
+        <feColorMatrix values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.0526777627 0" type="matrix" in="shadowInnerInner1"></feColorMatrix>
       </filter>
     </defs>
-    <g id="Fresh-iterations" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" opacity="0.5">
-      <g id="Group-113" transform="translate(-587.000000, -1691.000000)">
+    <g id="Fresh-iterations" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="Group-113" transform="translate(-615.000000, -59.000000)">
         <g id="iPad-Pro">
-          <g id="home-button">
-            <use fill="#FFFFFF" fill-rule="evenodd" xlink:href="#path-2"></use>
-            <use fill="black" fill-opacity="1" filter="url(#filter-3)" xlink:href="#path-2"></use>
-            <circle stroke="url(#linearGradient-1)" stroke-width="4" stroke-linejoin="square" cx="625" cy="1729" r="36"></circle>
+          <g id="cam" transform="translate(615.000000, 59.000000)">
+            <g id="Oval-3">
+              <use fill="#F5F5F5" fill-rule="evenodd" xlink:href="#path-1"></use>
+              <use fill="black" fill-opacity="1" filter="url(#filter-2)" xlink:href="#path-1"></use>
+            </g>
+            <circle id="Oval-3" fill="#FFFFFF" cx="10" cy="10" r="5"></circle>
           </g>
         </g>
       </g>
