--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -70,7 +70,7 @@
 
       </div>
         <div class="d-none d-lg-block col-lg-6 text-lg-center text-left pt- pt-lg-0">
-          <%= render :partial => "/web/ost/index/ipad" %>
+          <%= render :partial => "/web/ost/index/latest_transactions" %>
           <div class="row fallbackImage align-items-end align-items-md-enter justify-content-end" style="display: none">
             <img class="img-fluid responsively-lazy ost-home-web-img"
                  src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
