--- a/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
+++ b/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
@@ -1,13 +1,21 @@
 @import "../../ost_theme/variables";
 .transactions-tab{
-  height:600px;
+  height:auto;
   max-width: 430px;
   background-color : white;
   border-radius: 25px;
   box-shadow: 0px 3px 4px 0px rgba(128,120,120,0.75);
-  .transactions-tab-screen{
+  .transactions-tab-screen-container{
     background-image: url("/back.png");
-    //height: 100%;
+    height: 510px;
+    #loading-state{
+      top:50%;
+      border-radius : 50%;
+      background-color: $white;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      padding: 10px;
+    }
     .transaction-header{
       max-height: 70px;
     }
